err/pybdist.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pybdist'...
Compiling './lib/python3.5/site-packages/pybdist/debian.py'...
***   File "./lib/python3.5/site-packages/pybdist/debian.py", line 41
    print 'Copying from %r to %r' % (from_dir, to_dir)
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pybdist/documents.py'...
***   File "./lib/python3.5/site-packages/pybdist/documents.py", line 302
    print setup_dir
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pybdist/googlecode_update.py'...
***   File "./lib/python3.5/site-packages/pybdist/googlecode_update.py", line 87
    print 'Checking SHA1 at %r' % url
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pybdist/googlecode_upload.py'...
***   File "./lib/python3.5/site-packages/pybdist/googlecode_upload.py", line 180
    print 'Please enter your googlecode.com password.'
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pybdist/i18n.py'...
***   File "./lib/python3.5/site-packages/pybdist/i18n.py", line 32
    print ' '.join(args)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pybdist/mailinglist.py'...
***   File "./lib/python3.5/site-packages/pybdist/mailinglist.py", line 127
    print 'Sent mail to %s' % setup.MAILING_LIST
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pybdist/mercurial.py'...
***   File "./lib/python3.5/site-packages/pybdist/mercurial.py", line 34
    print ' '.join(args)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pybdist/pybdist.py'...
***   File "./lib/python3.5/site-packages/pybdist/pybdist.py", line 78
    print ' '.join(args)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pybdist/pypi_list.py'...
***   File "./lib/python3.5/site-packages/pybdist/pypi_list.py", line 62
    print get_latest_version('myzones')
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pybdist/release.py'...
***   File "./lib/python3.5/site-packages/pybdist/release.py", line 78
    print 'Bad changelog, got two versions %r & %r' % (version, grps.group(1))
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pybdist/rst_check.py'...
***   File "./lib/python3.5/site-packages/pybdist/rst_check.py", line 35
    print ' '.join(args)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pybdist/spell_check.py'...
***   File "./lib/python3.5/site-packages/pybdist/spell_check.py", line 41
    print ' '.join(args)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pybdist/util.py'...
***   File "./lib/python3.5/site-packages/pybdist/util.py", line 85
    print 'Updated %r' % fname
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pybdist-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
